fixes nav expansion - no longer hidden by article picture

--- a/easy-read.css
+++ b/easy-read.css
@@ -60,16 +60,17 @@ ul {
     min-width: 10rem;
     /* padding: 1rem 6%; */
 }
-header {
+#header-main {
     display: flex;
     justify-content: space-between;
     height: 4rem;
+    overflow: hidden;
     width: 100%;
     box-shadow: 0 0px 12px 0;
 }
 #header-brand {
     display: flex;
-    margin: auto 1rem;
+    margin: 1rem;
 }
 #brand-logo {
     font-size: 2.1rem;
@@ -89,8 +90,8 @@ nav i {
 }
 nav ul {
     padding-top: 1rem;
-    height: 100vh;
-    display: none;
+    /* height: 100vh; */
+    /* display: none; */
 }
 .nav-link {
     font-size: 1.4rem;
